// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@checkup/cli normal cli output if excludePaths are provided by both the config and command line, use command line 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (4 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 0e3da47ee1e0a5e663465af5cc66cf37

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 1 lines of code
■ hbs (1)


"
`;

exports[`@checkup/cli normal cli output if excludePaths are provided by both the config and command line, use command line 2`] = `
"
Checkup report generated for checkup-app v0.0.0 (5 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 0e3da47ee1e0a5e663465af5cc66cf37

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 2 lines of code
■ js (2)


"
`;

exports[`@checkup/cli normal cli output should output checkup result 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (6 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config dd17cda1fc2eb2bc6bb5206b41fc1a84

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 3 lines of code
■ js (2)
■ hbs (1)


"
`;

exports[`@checkup/cli normal cli output should output checkup result in JSON 1`] = `
Object {
  "$schema": "https://schemastore.azurewebsites.net/schemas/json/sarif-2.1.0-rtm.5.json",
  "properties": Object {
    "actions": Array [],
    "analyzedFiles": Array [
      ".checkuprc",
      ".eslintrc.js",
      "index.hbs",
      "index.js",
      "package-lock.json",
      "package.json",
    ],
    "analyzedFilesCount": 6,
    "cli": Object {
      "args": Object {
        "paths": Array [],
      },
      "config": Object {
        "$schema": "https://raw.githubusercontent.com/checkupjs/checkup/master/packages/core/src/schemas/config-schema.json",
        "excludePaths": Array [],
        "plugins": Array [],
        "tasks": Object {},
      },
      "configHash": "dd17cda1fc2eb2bc6bb5206b41fc1a84",
      "flags": Object {
        "format": "json",
        "outputFile": "",
      },
      "schema": 1,
      "version": "0.0.0",
    },
    "project": Object {
      "name": "checkup-app",
      "repository": Object {
        "activeDays": "0 days",
        "age": "0 days",
        "linesOfCode": Object {
          "total": 3,
          "types": Array [
            Object {
              "extension": "js",
              "total": 2,
            },
            Object {
              "extension": "hbs",
              "total": 1,
            },
          ],
        },
        "totalCommits": 0,
        "totalFiles": 0,
      },
      "version": "0.0.0",
    },
    "timings": Object {},
  },
  "runs": Any<Array>,
  "version": "2.1.0",
}
`;

exports[`@checkup/cli normal cli output should run a single task if the tasks option is specified with a single task 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (6 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config dd17cda1fc2eb2bc6bb5206b41fc1a84

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 3 lines of code
■ js (2)
■ hbs (1)

=== Fake

File Count Task

■ hi (NaN)


"
`;

exports[`@checkup/cli normal cli output should run a task if its passed in via command line, even if it is turned "off" in config 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (6 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 2910e38984c8092494a42c88b642b9de

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 3 lines of code
■ js (2)
■ hbs (1)

=== Fake

File Count Task

■ hi (-NaN)


"
`;

exports[`@checkup/cli normal cli output should run multiple tasks if the tasks option is specified with multiple tasks 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (6 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config dd17cda1fc2eb2bc6bb5206b41fc1a84

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 3 lines of code
■ js (2)
■ hbs (1)

=== Fake

File Count Task

■ hi (-NaN)

Foo Task

■ hi (-NaN)


"
`;

exports[`@checkup/cli normal cli output should run the tasks on the globs passed into checkup, if provided, instead of entire app 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (3 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config dd17cda1fc2eb2bc6bb5206b41fc1a84

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 3 lines of code
■ hbs (2)
■ js (1)

=== Fake

File Count Task

■ hi (-NaN)


"
`;

exports[`@checkup/cli normal cli output should run the tasks on the globs passed into checkup, if provided, instead of entire app 2`] = `
"
Checkup report generated for checkup-app v0.0.0 (9 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config dd17cda1fc2eb2bc6bb5206b41fc1a84

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 6 lines of code
■ js (4)
■ hbs (2)

=== Fake

File Count Task

■ hi (-NaN)


"
`;

exports[`@checkup/cli normal cli output should use the config at the config path if provided 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (6 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config dd17cda1fc2eb2bc6bb5206b41fc1a84

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 3 lines of code
■ js (2)
■ hbs (1)


"
`;

exports[`@checkup/cli normal cli output should use the excludePaths provided by the command line 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (3 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config dd17cda1fc2eb2bc6bb5206b41fc1a84

 0 lines of code


"
`;

exports[`@checkup/cli normal cli output should use the excludePaths provided by the command line 2`] = `
"
Checkup report generated for checkup-app v0.0.0 (5 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config dd17cda1fc2eb2bc6bb5206b41fc1a84

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 2 lines of code
■ js (2)


"
`;

exports[`@checkup/cli normal cli output should use the excludePaths provided by the config 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (5 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 0e3da47ee1e0a5e663465af5cc66cf37

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 2 lines of code
■ js (2)


"
`;

exports[`@checkup/cli normal cli output should use the excludePaths provided by the config 2`] = `
"
Checkup report generated for checkup-app v0.0.0 (6 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config dd17cda1fc2eb2bc6bb5206b41fc1a84

■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 3 lines of code
■ js (2)
■ hbs (1)


"
`;
